# mpl_qt_viz

./: .gitignore  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: conda-publish.yml  pypi-publish.yml  superlinter.yml
conda.recipe/: meta.yaml
docSrc/source/: conf.py  examples.rst  index.rst
docs/: .buildinfo  .nojekyll  genindex.html  index.html  mpl_qt_viz.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/matplotlib/: backend_bases.html  widgets.html
docs/_modules/matplotlib/backends/: backend_agg.html  backend_qt5.html  backend_qt5agg.html
docs/_modules/mpl_qt_viz/roiSelection/: _coreClasses.html
docs/_modules/mpl_qt_viz/visualizers/: _PlotNd.html  _dockPlot.html  _multiPlot.html
docs/_sources/: index.rst.txt  mpl_qt_viz.rst.txt
docs/source/: conf.py  mpl_qt_viz.rst
examples/: dockablePlotWindowExample.py  multiPlotExample.py  plotNdExample.py  roiTest.py
src/MPL-Qt-Visualization/plotting/: __init__.py  _multiPlot.py  _sharedWidgets.py
src/MPL-Qt-Visualization/plotting/_PlotNd/: __init__.py  _canvas.py  _plots.py
src/MPL-Qt-Visualization/roiSelection/: __init__.py  coreClasses.py  widgetBase.py
src/mpl_qt_viz/: __init__.py  __main__.py
src/mpl_qt_viz/plotting/: __init__.py  _multiPlot.py  _sharedWidgets.py
src/mpl_qt_viz/roiSelection/: __init__.py  _coreClasses.py  _segmentation.py  coreClasses.py
src/mpl_qt_viz/visualizers/: __init__.py  _multiPlot.py  _sharedWidgets.py
tests/: conftest.py  testVisualizers.py
(+46 files in other folders)
